--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Code&display=swap');
+
+html,
+body,
+#root {
+  height: 100%;
+  width: 100%;
+}
